--- a/webmegalinkcpdeepwebdarkweb.html
+++ b/webmegalinkcpdeepwebdarkweb.html
@@ -11,17 +11,17 @@
   <h1>mega links cp</h1>  
 <div class="lop">  
    <li>mega link 1</li>
- <button onclick="window.location.href = 'https://mega.nz/folder/yDxAnCQJ#QxntyzLN03rpG6w3SW0Q0w'"> click aqui</button>
+ <button onclick="window.location.href = 'https://mega.nz/folder/aZwxBCIB#HzBDA0cNTnBS4nNj5MIMgQ'"> click aqui</button>
 <li>mega link 2</li>
  <button onclick="window.location.href = 'https://mega.nz/folder/0oJQzARS#dn9BLyKN_3MDieVN5mCVbA'"> click aqui</button>
  <li>mega top link 3</li>
- <button onclick="window.location.href = 'https://mega.nz/folder/kcdyVRTb#LyPcRBclYnSGVtkHt1sk1g'"> click aqui</button>
+ <button onclick="window.location.href = 'https://mega.nz/folder/AYlH1YKT#9NNkz0pUrqHGQ-_4IBOK9Q/folder/FElWmCgZ'"> click aqui</button>
  <li>mega link 4</li>
- <button onclick="window.location.href = 'https://mega.nz/folder/sU1VDJ7T#RLj_ufC-i3KdTh22NgZzJA'"> click aqui</button>
- <li>mega link 5 futuramente</li>
- <button onclick="window.location.href = '#'"> click aqui</button>
- <li>mega link 6 futuramente</li>
- <button onclick="window.location.href = '#'"> click aqui</button>
+ <button onclick="window.location.href = 'https://mega.nz/folder/Mx0y2C7a#_7wXUalVLwk36gEHjL8_dQ'"> click aqui</button>
+ <li>cha whatsapp top vídeo 5</li>
+ <button onclick="window.location.href = 'http://chat.whatszap.top/videos/'"> click aqui</button>
+ <li>mega link 6</li>
+ <button onclick="window.location.href = 'https://mega.nz/folder/DjJW3BwI#gqad-88sKH-z7Dp2TU3Ycg'"> click aqui</button>
  </div>
   
   <h3>vários links mega futuramente.</h3>
